--- a/package.json
+++ b/package.json
@@ -17,12 +17,20 @@
   },
   "homepage": "https://github.com/Min-92/news_web#readme",
   "dependencies": {
-    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "http-errors": "^1.7.3",
     "mocha": "^6.1.4",
+    "mongoose": "^5.6.5",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pug": "^2.0.4"
+  },
+  "devDependencies": {
+    "should": "^13.2.3",
+    "sinon": "^7.3.2",
+    "supertest": "^4.0.2"
   }
 }
