--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/Min-92/news_web#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "http-errors": "^1.7.3",
