--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "http-errors": "^1.7.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.7",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
