--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pug": "^2.0.4",
+    "request": "^2.88.0",
     "semantic-ui": "^2.4.2"
   },
   "devDependencies": {
